support undo of whole conditional format list, tdf#95617

Change-Id: I3ff0ddb05f794064e33164c60cd1b4e6b89dbcca